[tool.poetry]
name = "castproxy"
version = "0.1.0"
description = "Chromecast proxy for Chime"
authors = ["Oscar Peace <oscar@oscarcp.net>"]
license = "GNU GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.3"
PyChromecast = "^14.0.1"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
